--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.3.21'
-		springBootVersion = '2.1.3.RELEASE'
+		kotlinVersion = '1.3.50'
+		springBootVersion = '2.1.7.RELEASE'
 		dagger_version = '2.11'
 	}
 	repositories {
@@ -13,7 +13,6 @@ buildscript {
 		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
 	}
 }
 
@@ -28,22 +27,23 @@ apply plugin: 'kotlin-kapt'
 
 group = 'br.com.blog'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.9'
+sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
 }
 
 ext{
-	junitVersion = '5.3.2'
-	junitLaucherVersion ='1.3.2'
-	versaoMockito = '2.25.1'
+	versaoJUnit = '5.5.1'
+	versaoMockito = '2.28.2'
 	versaoMockitoKotlin = '2.1.0'
-	versaoMockitoInline = '2.25.1'
+	versaoMockitoInline = '2.26.0'
 }
 
 test{
-	useJUnitPlatform()
+	useJUnitPlatform{
+		includeEngines 'junit-jupiter', 'junit-vintage'
+	}
 	dependsOn 'cleanTest'
 
 	testLogging {
@@ -69,27 +69,24 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
-	implementation 'org.flywaydb:flyway-core'
-	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-	implementation "org.jetbrains.kotlin:kotlin-reflect"
-
+	compile 'com.fasterxml.jackson.module:jackson-module-kotlin'
+	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
-
 	testImplementation ("org.springframework.boot:spring-boot-starter-test"){
 		exclude module: "junit"
 	}
-	testCompile "com.h2database:h2:1.4.197"
-	testCompile "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
-	testCompile "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
-	testCompile "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
-	testCompile "org.junit.platform:junit-platform-launcher:${junitLaucherVersion}"
+	compile  'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+	implementation 'org.flywaydb:flyway-core'
+	compile 'com.fasterxml.jackson.core:jackson-databind'
+	compile 'com.fasterxml.jackson.core:jackson-core'
+	testCompile "org.junit.jupiter:junit-jupiter:${versaoJUnit}"
 	testCompile "org.mockito:mockito-core:${versaoMockito}"
 	testCompile "org.mockito:mockito-junit-jupiter:${versaoMockito}"
+	testCompile "org.mockito:mockito-inline:${versaoMockito}"
 	testCompile "com.nhaarman.mockitokotlin2:mockito-kotlin:${versaoMockitoKotlin}"
-	testCompile "org.mockito:mockito-inline:${versaoMockitoInline}"
 }
 
 tasks.withType(JavaCompile) {
